[CSS Exclusions] Increasing padding does not correctly layout child blocks https://bugs.webkit.org/show_bug.cgi?id=112929

Reviewed by David Hyatt.

If a child block has changed dimension inside a shape and it has affected the block siblings
we need to relayout the content inside the shape.

Source/WebCore:

Test: fast/exclusions/shape-inside/shape-inside-sibling-block-dimension-change-needs-relayout.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::updateRegionsAndExclusionsAfterChildLayout): Add condition for dimension change.
(WebCore::RenderBlock::layoutBlock): Call updateRegionsAndExclusionsAfterChildLayout with the new parameter.
* rendering/RenderBlock.h:
(RenderBlock): Add extra parameter to updateRegionsAndExclusionsAfterChildLayout(...)

LayoutTests:

* fast/exclusions/shape-inside/shape-inside-sibling-block-dimension-change-needs-relayout-expected.html: Added.
* fast/exclusions/shape-inside/shape-inside-sibling-block-dimension-change-needs-relayout.html: Added.


Canonical link: https://commits.webkit.org/132737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148120 268f45cc-cd09-0410-ab3c-d52691b4dbfc